overflow:hidden on page-block in case of float issues

--- a/media/css/app.css
+++ b/media/css/app.css
@@ -12,6 +12,7 @@
 
 .page-block {
     margin-bottom: 2em;
+    overflow: hidden;
 }
 
 footer {
